--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -28,3 +28,18 @@
     margin-top: 70px;
     border-top: 1px solid #E5E5E5;
 }
+
+header.hero-unit {
+    margin-bottom: 200px;
+    background-image: url("https://download.unsplash.com/14/unsplash_524000a90aaad_1.JPG");
+    background-size: 100% 100%;
+    height: 500px;
+}
+
+.lead {
+    font-size: 70px;
+    margin-top: 135px;
+}
+.navbar-default {
+    margin-bottom: 70px;
+}
